[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-pyaltibase"
version = "0.2.0"
description = "Altibase dialect for SQLAlchemy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Yeongseon Choe", email = "yeongseon.choe@gmail.com"},
]
keywords = ["SQLAlchemy", "Altibase", "dialect"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "sqlalchemy>=2.0.23,<2.2",
]

[project.optional-dependencies]
pyaltibase = ["pyaltibase"]
alembic = ["alembic"]
aioodbc = ["aioodbc>=0.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff==0.15.6",
    "alembic>=1.10",
]

[project.urls]
Homepage = "https://github.com/yeongseon/sqlalchemy-pyaltibase"
Repository = "https://github.com/yeongseon/sqlalchemy-pyaltibase"
Issues = "https://github.com/yeongseon/sqlalchemy-pyaltibase/issues"

[project.entry-points."sqlalchemy.dialects"]
altibase = "sqlalchemy_altibase.dialect:AltibaseDialect"
"altibase.pyaltibase" = "sqlalchemy_altibase.dialect:AltibaseDialect"
"altibase.aioodbc" = "sqlalchemy_altibase.aioodbc:AltibaseDialectAsync_aioodbc"

[project.entry-points."alembic.ddl"]
altibase = "sqlalchemy_altibase.alembic_impl:AltibaseImpl"

[tool.setuptools]
packages = ["sqlalchemy_altibase"]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["sqlalchemy_altibase"]

[tool.coverage.run]
source = ["sqlalchemy_altibase"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--tb native -v -r fxX --maxfail=25 -p no:warnings"
python_files = "test/*test_*.py"

[tool.basedpyright]
typeCheckingMode = "off"
reportUnsafeMultipleInheritance = "none"
reportMissingTypeArgument = "none"
reportIncompatibleMethodOverride = "none"
reportAssignmentType = "none"
